# alurtmee

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.claude/agents/: architect-agent.md  ask-agent.md  backend-agent.md  code-agent.md  compliance-agent.md  data-agent.md  debug-agent.md  devops-agent.md  document-agent.md  enforcement-agent.md  explain-agent.md  frontend-agent.md  incident-agent.md  migration-agent.md  mlai-agent.md  observability-agent.md  orchestrator-agent.md  performance-agent.md  plan-agent.md  product-agent.md  refactor-agent.md  review-agent.md  security-agent.md  test-agent.md
.claude/conventions/core/: general.md
.claude/conventions/languages/: rust.md
.github/workflows/: ci.yml  pages.yml  release.yml  version-bump.yml
.prompticorn/: .prompticorn.yaml
crates/app/: Cargo.toml
crates/app/src/: demo.rs  main.rs  notification_dispatcher.rs  notifier.rs  pr_list_model.rs  settings_model.rs  splash_frames.rs  telemetry.rs  theme.rs  view.rs  widgets.rs  xdg_notifier.rs
crates/app/tests/: auth_scope_acceptance.rs  ci_timing_acceptance.rs  classification_acceptance.rs  enrichment_acceptance.rs  filter_acceptance.rs  poller_acceptance.rs
crates/domain/: Cargo.toml
crates/domain/src/: auth_state.rs  author.rs  author_kind.rs  bot_overrides.rs  category.rs  category_classifier.rs  category_kind.rs  change_event.rs  check_run.rs  ci_alert.rs  ci_alert_kind.rs  ci_baseline.rs  classification.rs  classification_input.rs  comment.rs  comment_kind.rs  filter.rs  item.rs  label_map.rs  lib.rs  org.rs  percentile.rs  poll_cadence.rs  pr_enrichment.rs  pr_id.rs  pull_request.rs  rate_limit_state.rs  repo.rs  repo_selection.rs  review.rs  slow_ci_config.rs  slow_flag.rs  test_state.rs  test_summary.rs  user.rs  workflow_run.rs
crates/gh-client/: Cargo.toml
crates/gh-client/src/: client.rs  error.rs  lib.rs  open_prs_result.rs  pr_outcome.rs  rfc3339.rs  wire.rs
crates/gh-client/src/wire/: wire_check_run.rs  wire_check_runs_response.rs  wire_combined_status.rs  wire_comment.rs  wire_head.rs  wire_label.rs  wire_org.rs  wire_pr_file.rs  wire_pull_request.rs  wire_pull_request_user.rs  wire_repo.rs  wire_repo_owner.rs  wire_review.rs  wire_user.rs  wire_workflow_run.rs  wire_workflow_runs_response.rs
crates/gh-client/tests/: actions_timing.rs  changed_paths.rs  enrichment.rs  open_prs_conditional.rs  orgs_and_repos.rs
crates/gh-client/tests/fixtures/: commit_check_runs.json  commit_status.json  org_repos.json  pr_files.json  pr_issue_comments.json  pr_review_comments.json  pr_reviews.json  repo_pulls.json  repo_pulls_changed.json  user.json  user_orgs.json  user_repos_page1.json  user_repos_page2.json  workflow_runs.json
crates/poller/: Cargo.toml
crates/poller/src/: diff.rs  gh_api.rs  lib.rs  poll_error.rs  poll_event.rs  poll_outcome.rs  poll_store.rs  poller.rs
crates/poller/tests/: fake_ports.rs
crates/store/: Cargo.toml
crates/store/src/: error.rs  etag_record.rs  keychain.rs  lib.rs  migration.rs  store.rs  store_cache.rs  store_ci.rs  store_classifier.rs  store_config.rs  store_enrichment.rs
docs/: DESIGN.md  README.md  downloads.html  index.html
docs/assets/css/: styles.css
docs/assets/js/: downloads.js  main.js
packaging/: alurtmee.desktop  com.snoodleboot.Alurtmee.desktop  com.snoodleboot.Alurtmee.metainfo.xml
planning/: README.md  TICKETS.md
planning/complete/: ALRT-1-PRD.md
planning/complete/exec/: PHASE-2.md  PHASE-3.md  PHASE-6.md
planning/current/: .gitkeep  ALRT-1-ARD.md  ALRT-1-PRD.md
planning/current/exec/: MASTER.md  PHASE-0.md  PHASE-1.md  PHASE-2.md  PHASE-3.md  PHASE-4.md  PHASE-5.md  PHASE-6.md  PHASE-7.md
scripts/: smoke_window.sh
