[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Iced UI + binary (ARD AD-2). Phase 0 ships a real, runnable empty window; the poller→store→UI
# wiring and native notifications land in later phases. `tracing` init is added by the
# observability lane.
[[bin]]
name = "alurtmee"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
gh-client = { path = "../gh-client" }
store = { path = "../store" }
poller = { path = "../poller" }
iced = { workspace = true, features = ["tokio"] }
notify-rust = { workspace = true }
directories = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
