[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Pure types + classifiers (ARD AD-5). No I/O, no platform code — fully unit-testable.
[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
