[package]
name = "gh-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# GitHub auth + REST client (ARD AD-3/AD-4). Phase 1 introduces the real async transport,
# pagination, header injection, and response mapping. Mock-first: tests run against `wiremock`.
[dependencies]
domain = { path = "../domain" }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP contract tests run against a `wiremock` server pointed at via the injectable base URL.
[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
