[package]
name = "poller"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Async scheduler + change-detection; emits domain events (ARD AD-3/AD-7). Phase 0 ships the event
# seam over `domain`; the `tokio` scheduler and diff logic are introduced in Phase 2.
[dependencies]
domain = { path = "../domain" }

[lints]
workspace = true
