[package]
name = "store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# SQLite cache / ETags / CI baselines / config + keychain wrapper (ARD AD-6). `rusqlite` backs the
# non-secret config (bundled SQLite = zero system dependency); the GitHub PAT lives ONLY in the OS
# keychain via `keyring`, never in SQLite/config/logs.
[dependencies]
domain = { path = "../domain" }
rusqlite = { workspace = true }
thiserror = { workspace = true }
# Linux Secret Service backend over the pure-Rust `zbus` D-Bus stack (not the C `libdbus`): the
# `async-secret-service` store driven by the already-present `async-io` executor, with pure-Rust
# crypto. This keeps the binary free of any C/copyleft-dual D-Bus linkage — the only native libs we
# link are the permissive GUI/GPU stack. keyring's `Entry` API stays synchronous; the async backend
# is blocked on internally. Features are additive; the workspace pins the keyring v3 line.
keyring = { workspace = true, features = ["async-secret-service", "async-io", "crypto-rust"] }
serde_json = { workspace = true }

[lints]
workspace = true
